--- a/parking-control/src/main/resources/applicationdev.properties
+++ b/parking-control/src/main/resources/applicationdev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/parking
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.username=*****
+spring.datasource.password=*****
 spring.jpa.hibernate.dbl.auto=update
 
 spring.jpa.properties.hibernate.jdbc.lab.non_contextual_creation=true
