--- a/parking-control/src/main/resources/application.properties
+++ b/parking-control/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/parking
 spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.jpa.hibernate.dbl.auto=update
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
 
 spring.jpa.properties.hibernate.jdbc.lab.non_contextual_creation=true
+
